# DataChat-Pro---AI-SQL-Assistant

./: README.md  app.py  pyproject.toml  requirements.txt  sqlite.py  student.db
